# p2p_sdk

./: .gitignore  CMakeLists.txt  build.gradle  cross.podspec  cross_debug.podspec
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  cross.cpp
android/src/main/java/com/cross/: Cross.java
example/android/: build.gradle
example/android/src/main/: AndroidManifest.xml
example/android/src/main/java/com/cross/example/: MainActivity.java
example/android/src/main/res/layout/: activity_main.xml
example/ios/: Podfile
example/ios/example/: Info.plist  LocalNetworkPrivacy.swift  ViewController.m
example/ios/example.xcodeproj/: project.pbxproj
example/ios/example/Base.lproj/: Main.storyboard
gradle/wrapper/: gradle-wrapper.properties
ios/Classes/: Cross.h  Cross.mm
src/jz/: CMakeLists.txt
src/jz/client_node/: ChangeLog.md  Readme.md
src/jz/client_node/cert/: cacert.pem  privatekey.pem
src/jz/client_node/include/: jzsdk.h
src/jz/client_node/src/: AppConfig.h  DirectTunnel.h  Managers.h  NodeManager.h  P2PSession.cpp  P2PSession.h  ProxyAcceptorManager.h  ProxySession.cpp  ProxySession.h  RelayTunnel.h  SecureConnection.cpp  SecureConnection.h  UdpProbe.h  UdpTunnel.cpp  UdpTunnel.h  jzsdk.cpp
src/jz/lib/x/: DataBuffer.h  DgramSocket.h  EventHandler.h  IPv4Utils.h  IdGenerator.h  JsonUtils.h  KcpConfig.h  Logger.h  MsgHeader.h  NetUtils.h  NiceUtils.h  ObjectManager.h  ObjectManager2.h  OsUtils.h  Random.h  SSLManager.h  ShellUtils.h  SingletonObjectManager.h  SingletonObjectManager2.h  Socket.h  SocketAcceptor.h  SocketReactor.h  StreamSocket.h  StringUtils.h  Structs.h  TCPConnection.h  TimerObject.h  TunnelMsgHeader.h  UUIDGenerator.h  UdpClient.h  UdpServer.h
src/p2p/: AppConfig.h  CMakeLists.txt  ClientNode.cpp  ClientNode.h  JsonHelper.h  JsonMsg.h  ProxyServer.cpp  ProxyServer.h  RelayTunnel.cpp  RelayTunnel.h  TunnelMsgHeader.h  UdpTunnel.cpp  UdpTunnel.h  jzsdk.cpp  p2p.cpp
src/p2p/include/: jzsdk.h  p2p.h
