cmake_minimum_required(VERSION 3.10.2)
set(CMAKE_CXX_STANDARD 14)
project(p2p)
add_library(${PROJECT_NAME} p2p.cpp)
add_library(libevent SHARED IMPORTED)
include_directories(${CMAKE_SOURCE_DIR}/third_party/libevent-android/${ANDROID_ABI}/include/)
set_target_properties(libevent PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/third_party/libevent-android/${ANDROID_ABI}/lib/libevent.a)
find_library(log-lib log)
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(${PROJECT_NAME} libevent ${log-lib})