cmake_minimum_required(VERSION 3.10.2)
set(CMAKE_CXX_STANDARD 14)
project(p2p)
add_library(${PROJECT_NAME} p2p.cpp ClientNode.cpp jzsdk.cpp ProxyServer.cpp RelayTunnel.cpp UdpTunnel.cpp)
add_library(libhv STATIC IMPORTED)
include_directories(${CMAKE_SOURCE_DIR}/third_party/3rd/ ${CMAKE_SOURCE_DIR}/third_party/libhv_android/include/)
set_target_properties(libhv PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/third_party/libhv_android/lib/libhv_static.a)
find_library(log-lib log)
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(${PROJECT_NAME} libhv kcp ${log-lib})