cmake_minimum_required(VERSION 3.10.2)
set(CMAKE_CXX_STANDARD 14)
project(p2p)
add_library(${PROJECT_NAME} p2p.cpp ClientNode.cpp jzsdk.cpp ProxyServer.cpp RelayTunnel.cpp UdpTunnel.cpp)
include_directories(${CMAKE_SOURCE_DIR}/third_party/3rd/ ${CMAKE_SOURCE_DIR}/third_party/libhv_android/include/ ${PROJECT_SOURCE_DIR})
add_library(libhv STATIC IMPORTED)
set_target_properties(libhv PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/third_party/libhv_android/lib/libhv_static.a)
add_library(libssl STATIC IMPORTED)
set_target_properties(libssl PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/third_party/libhv_android/lib/libssl.a)
add_library(libcrypto STATIC IMPORTED)
set_target_properties(libcrypto PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/third_party/libhv_android/lib/libcrypto.a)
find_library(log-lib log)
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(${PROJECT_NAME} libhv libssl libcrypto kcp ${log-lib})